@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.423 2006/10/31 16:08:11 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.424 2006/11/06 11:27:54 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -229,6 +229,12 @@ PH/33 The hint "could be header name not terminated by colon", which has been
 PH/34 The spec says: "With one important exception, whenever a domain list is
       being scanned, $domain contains the subject domain." There was at least
       one case where this was not true.
+
+PH/35 The error "getsockname() failed: connection reset by peer" was being
+      written to the panic log as well as the main log, but it isn't really
+      panic-worthy as it just means the connection died rather early on. I have
+      removed the panic log writing for the ECONNRESET error when getsockname()
+      fails.
 
 
 Exim version 4.63
